--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@strapi/strapi": "4.23.1",
     "axios": "^1.7.4",
     "pg": "8.11.3",
+    "querystring": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.4",
