--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@strapi/provider-upload-cloudinary": "4.23.1",
     "@strapi/strapi": "4.23.1",
     "axios": "^1.7.4",
+    "openai": "^4.90.0",
     "pg": "8.11.3",
     "querystring": "^0.2.1",
     "react": "^18.3.1",
