--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@strapi/provider-upload-cloudinary": "4.23.1",
     "@strapi/strapi": "4.23.1",
     "axios": "^1.7.4",
+    "dayjs": "^1.11.13",
     "openai": "^4.90.0",
     "pg": "8.11.3",
     "querystring": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.4",
+    "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
     "styled-components": "^5.3.11"
   },
