--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@strapi/strapi": "4.23.1",
     "axios": "^1.7.4",
     "dayjs": "^1.11.13",
+    "moment-timezone": "^0.5.48",
     "openai": "^4.90.0",
     "pg": "8.11.3",
     "querystring": "^0.2.1",
